unpackaged/main/default/objects/Tramites__c/Tramites__c.object-meta.xml
<CustomObject>
    <label>Trámite</label>
    <nameField>
        <label>Numero de Tramite</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trámites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>