unpackaged/main/default/objects/Tramites__c/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <label>Beneficiario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>