unpackaged/main/default/objects/Tramites__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>