unpackaged/main/default/objects/Tramites__c/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IVA</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>