unpackaged/main/default/objects/Tramites__c/fields/Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Solicitud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitudes de Trámites y Transferencias</label>
    <referenceTo>SolicitudesTramitesYTransferencias__c</referenceTo>
    <relationshipLabel>Trámites</relationshipLabel>
    <relationshipName>Tramites</relationshipName>
    <type>Lookup</type>
</CustomField>